Added images to front page

--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ header{
     padding-bottom: 10px;
     border-bottom: 1px solid black;
 }
+
+.frontpageimage{
+    width: 200px;
+    height: 200px;
+}
