--- a/style.css
+++ b/style.css
@@ -36,3 +36,24 @@ header{
     width: 200px;
     height: 200px;
 }
+
+p {
+    color: black;
+    width: 70%;
+    font-size: 125%;
+    font-family: "Georgia", "Times New Roman", serif;
+    line-height: 1.3;
+    margin-left: 20px;
+}
+
+.textandimages{
+    display: flex;
+    align-items: flex-start;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+img {
+    border: 5px solid white;
+    border-radius: 50px;
+}
