--- a/style.css
+++ b/style.css
@@ -56,18 +56,31 @@ p {
 }
 
 .showcase{
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     size-adjust: center;
     justify-content: center;
-    margin-left: none;
-    margin-right: none;
+    position: relative;
     border: 5px solid white;
     border-radius: 20px;
+    z-index: 1;
 }
 
 .frontpageshowcase{
     width: 20%;
     height: 500px;
     filter: blur(3px)
+    
+}
+
+.showcasetext{
+    text-align: center;
+    position: absolute;
+    top:45%;
+    margin-top: 0;
+    margin-bottom: 0;
+    color:black;
+    z-index: 2;
+    font-size: 300%;
+    font-family:"Georgia", "Times New Roman", serif;
 }
