--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
 
 p {
     color: black;
-    width: 70%;
+    width: 80%;
     font-size: 125%;
     font-family: "Georgia", "Times New Roman", serif;
     line-height: 1.3;
@@ -51,6 +51,7 @@ p {
 .textandimages{
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     margin-top: 50px;
     margin-bottom: 20px;
 }
