--- a/style.css
+++ b/style.css
@@ -41,30 +41,40 @@ header{
 
 p {
     color: black;
-    width: 80%;
+    width: 62%;
     font-size: 125%;
     font-family: "Georgia", "Times New Roman", serif;
     line-height: 1.3;
     margin-left: 20px;
+    margin-right: 20px;
+    border: 5px solid white;
+    border-radius: 20px;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+
 }
 
 .textandimages{
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
+    width: 100%;
+
 }
 
 .showcase{
-    margin-top: 20px;
+    margin-top: 50px;
+    width: 80%;
     display: flex;
-    size-adjust: center;
+    align-items: center;
     justify-content: center;
     position: relative;
     border: 5px solid white;
     border-radius: 20px;
     z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .frontpageshowcase{
@@ -80,8 +90,27 @@ p {
     top:45%;
     margin-top: 0;
     margin-bottom: 0;
-    color:black;
+    color: white;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background: blue;
     z-index: 2;
     font-size: 300%;
     font-family:"Georgia", "Times New Roman", serif;
+}
+
+@media (min-width: 480px) {
+    .textandimages{
+        margin-top: 50px;
+        margin-bottom: 20px;
+        margin-right: 50px;
+        margin-left: 50px;
+        width: auto;
+        
+    }
 }
