--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ p {
     margin-bottom: 0;
     color: white;
     background-color: transparent;
-    border: 2px solid white;
+    border: 3px solid white;
     border-radius: 20px;
     padding-left: 20px;
     padding-right: 20px;
@@ -101,6 +101,22 @@ p {
     z-index: 2;
     font-size: 300%;
     font-family:"Georgia", "Times New Roman", serif;
+}
+.socials{
+    height: 100px;
+    width: 100px;
+    border: 5px solid white;
+    border-radius: 20px;
+    margin: 10px;
+}
+.socialsdiv{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer{
+    text-align: center;
 }
 
 @media (min-width: 480px) {
