--- a/style.css
+++ b/style.css
@@ -4,33 +4,40 @@
   
 input {
     background-color: transparent;
-    color: black;
+    color: white;
     border: none;
     width: 30%;
     height: 50px;
     border-radius: 6px;
+    margin-top: 10px;
 
     
 }
 input:hover{
-    border: 1px solid black;
+    border: 1px solid white;
     cursor: pointer;
     background-color: transparent;
 }
 body{
-    background-color:rgb(246, 203, 150);
+    background-color:rgb(240, 240, 250);
+    margin: 0;
+    padding: 0;
 }
 a{
     margin: 10px;
+    color: white;
 }
 
 header{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 10px;
-    border-bottom: 1px solid black;
+    padding-bottom: 14px;
+    border-bottom: 1px solid white;
+    background-color: rgb(11, 15, 106);
 }
+
+  
 
 .frontpageimage{
     width: 200px;
@@ -63,44 +70,45 @@ p {
 }
 
 .showcase{
-    margin-top: 60px;
-    width: 92%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    border: 8px solid white;
     border-radius: 10px;
     z-index: 1;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+    
 
 }
 
 .frontpageshowcase{
     width: 20%;
     height: 200px;
+    
 }
 
 .showcasetext{
     text-align: center;
     position: absolute;
-    top:35%;
+    top:36%;
     margin-top: 0;
     margin-bottom: 0;
-    color: white;
+    color: rgb(11, 15, 106);
     background-color: transparent;
-    border: 3px solid white;
     border-radius: 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background: blue;
+    background: white;
     z-index: 2;
-    font-size: 300%;
-    font-family:"Georgia", "Times New Roman", serif;
+    font-size: 220%;
+    font-family: 'Dancing Script', cursive;
+
+      
 }
 .socials{
     height: 100px;
@@ -128,13 +136,14 @@ footer{
         width: auto;
     }
     .showcase{
-        width: 70%;
+        width: 100%;
     }
     .frontpageshowcase{
-        
         height: 500px;
     }
     .showcasetext{
-        top:45%;
+        top:74%;
+        background: transparent;
+        font-size: 450%;
     }
 }
