--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 90%;
 }
 
 .aboutpagetoptext{
@@ -191,7 +192,7 @@ footer{
     margin-top: 20px;
     background-color: rgb(11, 15, 106);
     color: white;
-    border: 1px solid white;
+    border: 1px solid rgb(11, 15, 106);
     border-radius: 6px; 
     width: auto;
     padding-left: 20px;
